[gd_scene load_steps=8 format=3 uid="uid://csvtuuyysg1v4"]

[ext_resource type="Script" path="res://menu.gd" id="1_xalge"]
[ext_resource type="Texture2D" uid="uid://08o0eb2wxfym" path="res://Sprites/new_game.png" id="2_3iap7"]
[ext_resource type="Texture2D" uid="uid://so2xx7s7j8k6" path="res://Sprites/title.png" id="2_n48ku"]
[ext_resource type="Texture2D" uid="uid://pcxb6j4ke87u" path="res://Sprites/foto.png" id="3_jaa3t"]
[ext_resource type="Texture2D" uid="uid://cn80ivdjpvn2u" path="res://Sprites/continue.png" id="3_wpre3"]
[ext_resource type="Texture2D" uid="uid://lgs215vwlfol" path="res://Sprites/options.png" id="4_3bep7"]
[ext_resource type="Texture2D" uid="uid://b8uetn3bj1374" path="res://Sprites/exit.png" id="5_mqyaj"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_xalge")

[node name="button_new_game" type="TextureButton" parent="."]
offset_left = 510.0
offset_top = 278.0
offset_right = 603.0
offset_bottom = 309.0
scale = Vector2(1.34654, 1.71099)
texture_normal = ExtResource("2_3iap7")

[node name="button_continue" type="TextureButton" parent="."]
offset_left = 509.0
offset_top = 343.0
offset_right = 602.0
offset_bottom = 374.0
scale = Vector2(1.34654, 1.71099)
texture_normal = ExtResource("3_wpre3")

[node name="button_options" type="TextureButton" parent="."]
offset_left = 508.0
offset_top = 408.0
offset_right = 601.0
offset_bottom = 439.0
scale = Vector2(1.34654, 1.71099)
texture_normal = ExtResource("4_3bep7")

[node name="button_exit" type="TextureButton" parent="."]
offset_left = 506.0
offset_top = 474.0
offset_right = 599.0
offset_bottom = 505.0
scale = Vector2(1.34654, 1.71099)
texture_normal = ExtResource("5_mqyaj")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(552, 162)
scale = Vector2(2, 2)
texture = ExtResource("2_n48ku")

[node name="Foto" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1006, 566)
texture = ExtResource("3_jaa3t")

[connection signal="pressed" from="button_new_game" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="button_continue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="button_options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="button_exit" to="." method="_on_button_exit_pressed"]
